2002-11-03  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Decode text
	part only.

2002-04-16   Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (mime-file-types): Add setting of *.jpeg for image/jpeg.

2002-10-26  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-view.el (mime-preview-find-boundary-info): Fix logic. Do not
	refer next to next part before examining the next part.

2002-08-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-user-agent-value): Add
	`xemacs-extra-name'.

2000-10-19  Takanori Saneto  <sanewo@ba2.so-net.ne.jp>

	* pgg-pgp.el (pgg-pgp-process-region): bind process-environment
	locally so that setenv's effect won't last forever.
	pgg-pgp5.el (pgg-pgp5-process-region): Ditto.

2000-09-29  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-edit.el (mime-file-types): Fix to use application/msword
	instead of application/winword.

2000-08-11  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-view.el (mime-display-text/plain): Display warning message
	when `mime-insert-text-content' fails.

2000-08-04   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Don't bind
	coding-system-for-read.

2000-07-04  Yuuichi Teranishi  <teranisi@gohome.org>

	* mime-image.el (mime-image-insert) [XEmacs]:
	Insert `string' only if it is non-nil.

2000-06-27   Daiki Ueno  <ueno@unixuser.org>

	* mime-image.el (mime-image-insert): Synch with the latest image.el.
	(mime-display-image): Don't pass underlying string "x".

2000-06-09   Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (mime-edit-insert-key): Insert a text tag when
	the buffer has any trailing text.

2000-06-05  Shugo Maeda <shugo@ruby-lang.org>

	* pgg-gpg.el (pgg-scheme-insert-key): Don't quote user id.

2000-05-21   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Abolish redundant nconc.

2000-05-16   Daiki Ueno  <ueno@unixuser.org>
